--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* RGB CODE = 51 122 183 */
 /* RGB CODE = 232 133 0 */
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400|Lustria|Lato:300,400,700|Roboto+Slab:300,400);
+@import url(http://fonts.googleapis.com/css?family=Lustria|Lato:200,300,400,700);
 /* Pre loader */
 #preloader {
   position: fixed;
@@ -103,28 +103,55 @@ body {
 
 /*      Services Page
 -------------------------------------------------------------- */
-.poly-service {
+.service {
   background-color: #F0FFF0;
-  color: #337ab7; }
-  .poly-service h1 {
-    font-family: 'Roboto Slab', serrif; }
-  .poly-service h2 {
-    font-family: 'Roboto Slab', serrif; }
+  color: #337ab7;
+  font-family: 'Lato', sans-serif; }
+  .service h1 {
+    font-weight: 400; }
+  .service h2 {
+    font-weight: 300; }
+  .service p {
+    font-weight: 200;
+    margin-top: 35px;
+    font-size: 18px;
+    color: #2e2e2e; }
+
+.service-contact {
+  margin-top: 40px; }
+  .service-contact a {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400; }
+
+.service-span {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300; }
 
 .kwicks-service {
-  height: 400px;
+  height: 375px;
   margin-top: 30px !important; }
   .kwicks-service li {
-    height: 400px;
+    height: 375px;
     /* overridden by kwicks but good for when JavaScript is disabled */
     margin-left: 5px;
     float: left; }
 
 #poly-advantages {
-  font-family: 'Ubuntu', serrif;
-  font-size: 20px;
-  font-weight: 300;
+  font-family: 'Lato', serrif;
+  font-size: 18px;
+  font-weight: 200;
   color: #2e2e2e; }
+  #poly-advantages ul {
+    list-style-type: none;
+    -webkit-padding-start: 0px;
+    -moz-padding-start: 0px;
+    padding-start: 0px; }
+
+#slider-epoxy {
+  margin-top: 30px; }
+
+#slider-grind {
+  margin-top: 30px; }
 
 /*      Home Page aka index
 -------------------------------------------------------------- */
@@ -133,7 +160,7 @@ body {
   padding-top: 45px; }
   .main-info p {
     font-family: 'Lustria', serrif;
-    font-size: 24px;
+    font-size: 20px;
     color: #2e2e2e;
     padding: 0 25px 0 25px;
     text-align: justify; }
@@ -169,7 +196,7 @@ body {
     font-weight: 400; }
   .specialize p {
     font-family: 'Lustria', serrif;
-    font-size: 20px;
+    font-size: 18px;
     text-align: justify; }
 
 .more-info-btn {
