--- a/css/style.scss
+++ b/css/style.scss
@@ -299,6 +299,7 @@ body {
     color: $fcGrey;
     padding: 0 25px 0 25px;
     text-align: justify;
+    margin-top: 15px;
   }
 
   p::first-letter {
@@ -365,9 +366,11 @@ body {
 .more-info-btn {
   color: white;
   background-color: $fcBlue;
-  margin-top: 50px;
+  margin-top: 30px;
   font-size: 24px;
   font-family: 'Roboto Slab', sans-serif;
+  padding: 10px 16px;
+  border-radius: 6px;
 }
 .more-info-btn:hover{
   text-decoration: none;
@@ -955,8 +958,7 @@ header.smaller {
 
   .special-align {
     margin-top: 10%;
-    margin-left: 30px;
-    margin-right: 10px;
+    margin-right: 20px;
   }
 
 }
