--- a/css/style.scss
+++ b/css/style.scss
@@ -237,12 +237,14 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     text-decoration: none;
+    font-size: 28px;
   }
 }
 
 .service-span {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
+  font-size: 28px;
 }
 
 .kwicks-service {
